tests/negative/typecheck/not.orng
// not.orng:5:22: error: expected a value of type `Int`, got a value of type `Bool`
// fn main() -> Int {not true}
//                     ^
// 
fn main() -> Int {not true}